--- a/language/it.json
+++ b/language/it.json
@@ -86,6 +86,36 @@
               {
                 "label": "Feedback in mancanza della parola chiave",
                 "description": "Questo feedback sarà visualizzato se nella risposta lo studente non usa né questa parola chiave, né una sua alternativa."
+              },
+              {
+                "label": "Feedback word shown if keyword included",
+                "description": "This option allows you to specify which word should be shown in front of your feedback if a keyword was found in the text.",
+                "options": [
+                  {
+                    "label": "keyword"
+                  },
+                  {
+                    "label": "alternative found"
+                  },
+                  {
+                    "label": "answer given"
+                  },
+                  {
+                    "label": "none"
+                  }
+                ]
+              },
+              {
+                "label": "Feedback word shown if keyword missing",
+                "description": "This option allows you to specify which word should be shown in front of your feedback if a keyword was not found in the text.",
+                "options": [
+                  {
+                    "label": "keyword"
+                  },
+                  {
+                    "label": "none"
+                  }
+                ]
               }
             ]
           }
