Make task description (ARIA) translatable

--- a/language/.en.json
+++ b/language/.en.json
@@ -252,6 +252,11 @@
       "label": "Save message",
       "description": "Message indicating that the text has been saved",
       "default": "saved"
+    },
+    {
+      "label": "Task description (not displayed)",
+      "description": "Accessibility text used for readspeakers",
+      "default": "Task description"
     }
   ]
 }
