Add changes after personal quality check
- Change detection of sample solution DOM element.
- Change xAPI scores for tasks that don't have scoring.
- Add option to set points for grading in host system.
- Fix bug for IE11 (doesn't know startsWith or endsWith).
- Clean code.

--- a/language/.en.json
+++ b/language/.en.json
@@ -185,6 +185,10 @@
           "description": "If checked, learners will only see the feedback that you provided for the keywords, but no score."
         },
         {
+          "label": "Points in host environment",
+          "description": "Used to award points for completion in host environment (not shown to learner)."
+        },
+        {
           "label": "Passing percentage",
           "description": "Percentage that's necessary for passing"
         },
