--- a/language/nl.json
+++ b/language/nl.json
@@ -185,6 +185,10 @@
           "description": "Indien aangevinkt, zien de gebruikers alleen de feedback die je hebt gegeven voor de trefwoorden, maar geen score."
         },
         {
+          "label": "Points in host environment",
+          "description": "Used to award points for completion in host environment (not shown to learner)."
+        },
+        {
           "label": "Slagingspercentage",
           "description": "Het percentage dat nodig is om te slagen"
         },
