--- a/language/de.json
+++ b/language/de.json
@@ -185,8 +185,8 @@
           "description": "Wenn diese Option gewählt ist, sehen die Lernenden nur deine Rückmeldung, nicht aber die Bepunktung. Es wird nichts gewertet."
         },
         {
-          "label": "Points in host environment",
-          "description": "Used to award points for completion in host environment (not shown to learner)."
+          "label": "Punkte im Wirtssystem",
+          "description": "Wird verwendet, um im Wirtssystem Punkte einzig für die Bearbeitung der Aufgabe zu vergeben (wird den Lernenden nicht angezeigt)."
         },
         {
           "label": "Prozentsatz zum Bestehen",
