HFP-1975 Read feedback via readspeaker
The feedback is read after reading the "show solution" button
text, but that's true for every content type, although it seems
to be inconsistend and depend on timing. It should be
checked and improved in H5P.Question.

Other improvements to a11y:
* Remove tabindex on empty message fields
* Read important message when text length is below required
  minimum
* Don't add tabindex to saved message as it doesn't seem to make sense.
  Will remain visual feedback only.
* Added a11y translations for Dutch, German and Italian

--- a/language/.en.json
+++ b/language/.en.json
@@ -256,6 +256,11 @@
       "label": "Save message",
       "description": "Message indicating that the text has been saved",
       "default": "saved"
+    },
+    {
+      "label": "Your result (not displayed)",
+      "description": "Accessibility text used for readspeakers",
+      "default": "Your result"
     }
   ]
 }
